# LLM-Agentic-Patterns

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
src/agentic_patterns/1_reflection/: agent.py  prompts.py  run_reflection.py  settings.py
src/agentic_patterns/s01_reflection/: agent.py  prompts.py  run_reflection.py
src/agentic_patterns/utils/: completions.py  logging.py
