[project]
name = "llm-agentic-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "graphviz>=0.21",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "types-colorama>=0.4.15.20250801",
]
